--- a/node/package.json
+++ b/node/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
-    "co-body": "^6.0.0"
+    "co-body": "^6.0.0",
+    "axios": "^0.21.0"
   },
   "devDependencies": {
     "@types/co-body": "^0.0.3",
     "@types/node": "12.x",
-    "@vtex/api": "6.44.0",
+    "@vtex/api": "6.46.0",
     "@vtex/tsconfig": "^0.5.6",
     "typescript": "3.9.7"
   },
