--- a/node/package.json
+++ b/node/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "co-body": "^6.0.0",
-    "axios": "^0.21.0"
+    "axios": "^0.21.0",
+    "async": "^3.2.5"
   },
   "devDependencies": {
     "@types/co-body": "^0.0.3",
     "@types/node": "12.x",
-    "@vtex/api": "6.46.0",
+    "@vtex/api": "6.46.1",
     "@vtex/tsconfig": "^0.5.6",
     "typescript": "3.9.7"
   },
