--- a/manifest.json
+++ b/manifest.json
@@ -26,14 +26,14 @@
     {
       "name": "outbound-access",
       "attrs": {
-        "host": "todddesantis.vtexcommercestable.com.br",
+        "host": "emekanwosu.vtexcommercestable.com.br",
         "path": "/"
       }
     },
     {
       "name": "outbound-access",
       "attrs": {
-        "host": "todddesantis.vtexpayments.com.br",
+        "host": "emekanwosu.vtexpayments.com.br",
         "path": "/"
       }
     }
